--- a/badapatra1.html
+++ b/badapatra1.html
@@ -79,7 +79,7 @@
             </thead>
         </table>
     </div>
-    <marquee behavior="scroll" direction="up" scrollamount="2" style="height: 500px;">
+    <marquee behavior="scroll" direction="up" scrollamount="10" style="height: 500px;">
         <table>
             <tbody>
                 <tr>
@@ -245,7 +245,7 @@
                 <tr>
                     <td>६</td>
                     <td>ऋणको ब्याजदर तथा अतिरिक्त शुल्क </td>
-                    <td> भाका नाघेको दिनको बार्षिक १ प्रतिशतका दरले अतिरिक्त शुल्क लाग्ने छ ।    </td>
+                    <td>सबै प्रकारको ऋणमा बार्षिक १४ प्रतिशतका दरले ब्याज लाग्ने छ र कर्जा भुक्तानी तालिका अनुसार ऋणीले किस्ता नबुझाएमा भाका नाघेको संवामा मात्र भाका नाघेको दिनको बार्षिक १ प्रतिशतका दरले अतिरिक्त शुल्क लाग्ने छ ।    </td>
                     <td>-</td>
                     <td>-</td>
                     <td>प्रवन्धक, लेखापाल</td>
