--- a/badapatra1.html
+++ b/badapatra1.html
@@ -24,7 +24,7 @@
             height: 550px; /* Set a fixed height for the container */
             overflow: hidden; /* Hide the overflow content */
             position: relative; /* Set position relative for the container */
-       
+        }
         .fixed-header {
             position: sticky; /* Position sticky for the fixed header */
             top: 0;
@@ -99,233 +99,86 @@
                     <td>अध्यक्ष र प्रवन्धक</td>
                 </tr>
                 <tr>
-            
-                    <td>८</td>
-                    <td>जग्गा फुकुवा सम्बन्धि</td>
-                    <td>ऋण भुक्तानी पछि सम्बन्धित वा इच्छाएको ब्यक्ति</td>
-                    <td>-</td>
-                    <td>१ दिन</td>
-                    <td>प्रवन्धक, लेखापाल</td>
-                </tr>
-                <tr>
-                    <td>९</td>
-                    <td>क्षमता अभिवृद्धि तथा सिप विकास कार्य</td>
-                    <td>क) सहकारी शिक्षा शिविर<br>ख) सिप मुलक तालिमहरु<br>ग) व्यवस्थापन तथा लेखा तालिम<br>घ) ..................................</td>
-                    <td>-</td>
-                    <td>१-३  दिन</td>
-                    <td>प्रवन्धक, लेखापाल</td>
-                </tr>
-                <tr>
-                    <td>१०</td>
-                    <td>साधारण सभा गरिने मिति</td>
-                    <td>प्रत्येक वर्षको पौष मसान्त भित्र </td>
-                    <td>-</td>
-                    <td>१ दिन</td>
-                    <td>संचालक समिति </td>
-                </tr>
-                <tr>
-                    <td>११</td>
-                    <td>वर्तमान संचालक समितिका अध्यक्ष, सचिव र कोषाध्यक्षको नाम, सम्पर्क फोन</td>
-                    <td>अध्यक्ष श्री : लाल बहादुर मल्ल - ९८४५१०३७०२ <br>सचिव श्री : रविराज उप्रेती - ९८४५०५७१८३ <br>कोषाध्यक्ष : बच्चुराम उप्रेती - ९८४५२१२४६७</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-               <tr>
-                    <td>१२</td>
-                    <td>उपभोक्ता पसल</td>
-                    <td>खुल्ने समय :<br> 
-मंसिर– माघ<br> 	 		
-विहान ६:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
-दिउस १२ :०० वजे देखी ६:००वजे सम्म ।<br> 
-शनिवार विहान ६:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
-दिउस ३ :०० वजे देखी ६:०० वजे सम्म ।<br> 
-बाँकी महिना 	<br> 		
-विहान ५:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
-दिउस १२ :०० वजे देखी ७:०० वजे सम्म ।<br> 
-शनिवार विहान ५:०० वजेदेखी १०: ०० वजे सम्म ।<br> 
-दिउस ३:०० वजे देखी ७:०० वजे सम्म ।<br> 
+                    <td>३</td>
+                    <td>बचत सेवा एवं ब्याजदर</td>
+                    <td> १. अनिवार्य मासिक बचत<br> 
+नियमहरु :<br> 
+	कम्तिमा रु १०० देखि आफ्नो क्षमता अनुसार मासिक बचत सबै सदस्यले अनिवार्य गर्नु पर्ने। <br> 
+	खतामा रु २००० छाडि  बाकिं रकम झिक्न सकिने छ ।<br> 
+	बचत दर परिर्वतन गर्न चाहेमा श्रावण महिनाबाट गर्न सकिने छ ।<br> 
+	व्याजदर वार्षिक ८ प्रतिशत  ।<br> <br> 
+
+२.दैनिक बचत<br> 
+नियमहरु :<br> 
+	यो स्वेच्छिक बचत हो ।<br> 
+	दैनिक रु १० देखि रु ५००  सम्म बचत गर्न सकिन्छ ।<br> 
+	यो ६ महिना पछि झिक्न सकिन्छ ।<br> 
+	व्याजदर वार्षिक ७  प्रतिशत  ।<br> <br> 
+
+३. मुद्धति बचत खाता <br> 
+नियमहरु :<br> 
+	निश्चित समयको लागि रु १००० देखि रु ५००००० सम्म बचत गर्न सकिन्छ ।<br> 
+ ९–११प्रतिशत सम्म ब्याज दिइने छ ।<br> 
+समयअवधि ४ वर्ष हुने छ । <br> 
+यदि समय अगावै पैसा चाहिएमा बचतको ९० प्रतिशत बचत ब्याजमा २ प्रतिशत ब्याज थपगरि ऋणको रुपमा झिक्न सकिन्छ ।<br> <br> 
+
+४.टार्गेट बचत <br> 
+नियमहरु :<br> 
+	वार्षिक कति बचत गर्ने सुरुमा त्यसको निश्चित गर्नु पर्दछ र एक वर्षभित्रमा दैनिक,साप्ताहिक,मासिक रुपमा सुरुमा कबोल गरेको रकम बचत गर्नु पर्दछ ।<br> 
+	व्याजदर वार्षिक ९  प्रतिशत  ।<br> 
+	 एक वर्ष पुरा भएपछि आवश्यक परेमा रु १००० खातामा छोडी झिक्न सकिन्छ ।<br><br>  
+
+५. खुत्रुके बचत<br> 
+नियमहरु :<br> 
+	रु ५०० मा खाता खोल्न सकिन्छ ।<br> 
+	हरेक महिनाको अन्त्यमा खुत्रुके खोलिने छ र खुत्रुकमो जम्मा भएको रकम बचत गर्न सकिने छ <br> 
+	व्याजदर वार्षिक ९ प्रतिशत  ।<br> <br> 
+
+६. संस्थागत बचत<br> 
+नियमहरु :<br> 
+	सहकारी ऐन अनुसार सदस्य बन्न मिल्ने संघ संस्था तथा अन्य निकायले यसमा बचत गर्न सक्नेछन् ।<br> 
+	यो ऐच्छिक बचत हो कुनैपनिवेला रु १०० भन्दा बढि बचत राख्न र झिक्न सकिने छ ।<br> 
+	व्याजदर वार्षिक ६  प्रतिशत  ।<br> <br> 
+
+७.बाल शिक्षा बचत<br> 
+नियमहरु :<br> 
+	यो ऐच्छिक बचत हो ।<br> 
+	१६ वर्ष भन्दा कम उमेरकाले यसमा बचत गर्न सक्छन्<br> 
+	मसिक कम्तिमा रु १०० बचत गर्नुपर्दछ र दैनिक भाग गरि पनि बचत गर्न सकिन्छ ।<br> 
+	यो १६ वर्ष पुराभएपछि वा एस.इ.इ. पास भएपछि झिक्न सकिन्छ ।<br> 
+	व्याजदर वार्षिक ९ प्रतिशत  ।<br> 
+	१६ वर्ष भन्दा कममा झिक्न चाहेमा २ प्रतिशत सर्भिस चार्ज लाग्नेछ ।<br> 
+ 	यो बाल शिक्षाको उदेश्यले गरिने बचत हो अभिभावकले १६ वर्षभन्दा कमकम  बच्चको    नाममा यो खाता खोल्न सक्छन् ।<br> <br> 
+
+८.चाडपर्व बचत<br> 
+नियमहरु :<br> 
+	कुनैपनि सदस्यले बचत गर्न सक्छन् ।<br> 
+	चाडपर्वको अवसरमा बचत गर्न सकिन्छ ।<br> 
+	व्याजदर वार्षिक ९ प्रतिशत  ।<br> 
+	 बचतको १५० प्रतिशत सम्म ऋण झिक्न सकिन्छ ।<br> <br> 
+
+९.समुह बचत<br> 
+नियमहरु :<br> 
+	नमुना  कृषक बहुमुखी सहकारी समुह र समुदायमा आधारित संस्था हो एउटै उदेश्य र चासो भएका हरुले समुहमा बचत गर्न सक्छन्<br> 
+	बचत रकम मासिक रु ५० देखि ५०० सम्म गर्न सकिन्छ <br> 
+	समुहमा रहेको सदस्यहरुले समुहको हिसाव किताब आफै राख्न र सञ्चालन गर्न सक्छन् ।<br> 
+	समुहमा रहेको रकमबाट व्याजदर २ प्रतिशत थप गरि ऋण लिन सकिन्छ ।<br> 
+	ब्याजदर वार्षिक ९ प्रतिशत ।<br> <br> 
+
+१०.विशेष बचत<br> 
+नियमहरु :<br> 
+	आवश्यक परेमा बचत रकम तत्काल लिन सकिने <br> 
+	यसमा कम्तिमा रु ५०० को खाता खोल्न सकिन्छ ।<br> 
+	व्याजदर वार्षिक ६ प्रतिशत ।<br> <br> 
 </td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>विक्रि सहायक</td>
+                    <td>--</td>
+                    <td>--</td>
+                    <td>--</td>
                 </tr>
-
-<tr>
-                    <td>१३</td>
-                    <td>किसान परिचय पत्र</td>
-                    <td>1.	नगरीकता प्रमाणपत्रको प्रतिलिपि १ थान<br>
-2.	जग्गाधनि प्रमाणपत्रको प्रतिलिपि १ थान<br>
-3.	जग्गा भाडामा कमाएको भए जग्गा धनि सँग गरीएको भाडा सम्झौतापत्रको प्रतिलिपि<br>
-4.	ऐलानि जग्गाको हकमा वडा सदस्यको रोहवरमा गरीको जग्गाको क्षेत्रफल खुल्ने सर्जिमिन मुचुल्का<br>
-5.	पसपोर्ट साइजको फोटो ३ प्रति<br>
-</td>
-                    <td>परिचय पत्र शुल्क १००</td>
-                    <td>७ दिन भित्र</td>
-                    <td>प्रवन्धक</td>
-                </tr>
-<tr>
-                    <td>१४</td>
-                    <td>तरकारी/सामान ढुवानि <br>काठे साँघु हुँदा</td>
-                    <td>
-	ब्याक लोडको अवस्थामा<br>
-1.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
-2.	हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
-अर्डर/मागको अवस्थामा<br>
-3.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-4.	केन्द्र हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-5.	हेटौंडा एरियाको केहि टाढा वाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-	(कमाने,सिमेन्ट उद्योग,चिसापानि,सामरी) आदि<br>
-अशक्त विरामीको अवस्थामा<br>
-6.	एम्बुलेन्स नपाएर आपतकालिन पर्दा भुन्द्रुङ्ग– हेटौंडा         एकतर्फि<br>
-7.	सहकारीको काममा बाधा नपारी केहीबेर पर्खेर फर्कने समेत<br>
-8.	भुन्द्रुङ्ग– भरतपुर एकतर्फि<br>
-तरकारी/फलफुलको अवस्थामा (लोडिङमा कृषकले अनिवार्य सहयोग गर्नुपर्ने)<br>
-9.	भुन्द्रुङ्ग– हेटौंडा प्रति किलो<br>
-10.	ठुलो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
-11.	सानो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
-12.	ठुलो झोला तरकारीको भाडा  हेटौंडा बजार सम्म लादा रु १० लेवर शुल्क सहित <br>
-13.	हरीयो सानो झोलामा काक्रो तथा हेभी तरकारीको  भाडा  हेटौंडा बजार सम्म लादा रु ७ लेवर शुल्क सहित<br> 
-14.	सानो झोला भिंडी,करेला को भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित 
-
-</td>
-                    <td>सदस्य/गैर सदस्य<br>
-1.	रु.०.५ /रु.०.७५<br>
-2.	रु.१ /रु.१.५<br><br>
-3.	रु.७००/रु.९००<br>
-4.	रु.१४००/रु.१६००<br>
-5.	रु.१७००/रु.१९००<br><br><br>
-6.	रु.८००/रु.१०००<br><br>
-7.	रु.११००/रु.१३००<br>
-8.	रु.२५००/रु.३०००<br><br>
-9.	रु.१.५/रु.२<br>
-10.	रु.३५<br>
-11.	रु.२५<br>
-12.	रु.५०<br>
-13.	रु.४०<br><br>
-14.	रु.३०<br>
-</td>
-                    <td>सोहि दिन </td>
-                    <td>चालक</td>
-                </tr>
-
-
-
-<tr>
-                    <td>१५</td>
-                   <td>तरकारी/सामान ढुवानि <br>काठे साँघु हुँदा</td>
-                    <td>
-	ब्याक लोडको अवस्थामा<br>
-1.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
-2.	हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
-अर्डर/मागको अवस्थामा<br>
-3.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-4.	केन्द्र हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-5.	हेटौंडा एरियाको केहि टाढा वाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
-	(कमाने,सिमेन्ट उद्योग,चिसापानि,सामरी) आदि<br>
-अशक्त विरामीको अवस्थामा<br>
-6.	एम्बुलेन्स नपाएर आपतकालिन पर्दा भुन्द्रुङ्ग– हेटौंडा         एकतर्फि<br>
-7.	सहकारीको काममा बाधा नपारी केहीबेर पर्खेर फर्कने समेत<br>
-8.	भुन्द्रुङ्ग– भरतपुर एकतर्फि<br>
-तरकारी/फलफुलको अवस्थामा (लोडिङमा कृषकले अनिवार्य सहयोग गर्नुपर्ने)<br>
-9.	भुन्द्रुङ्ग– हेटौंडा प्रति किलो<br>
-10.	ठुलो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
-11.	सानो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
-12.	ठुलो झोला तरकारीको भाडा  हेटौंडा बजार सम्म लादा रु १० लेवर शुल्क सहित <br>
-13.	हरीयो सानो झोलामा काक्रो तथा हेभी तरकारीको  भाडा  हेटौंडा बजार सम्म लादा रु ७ लेवर शुल्क सहित<br> 
-14.	सानो झोला भिंडी,करेला को भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित 
-
-</td>
-                    <td>सदस्य/गैर सदस्य<br>
-1.	रु.१ /रु.१.५<br>
-2.	रु.१.५ /रु.२<br><br>
-3.	रु.१०००/रु.१२००<br>
-4.	रु.१५००/रु.१७००<br>
-5.	रु.१८००/रु.२०००<br><br><br>
-6.	रु.८००/रु.१०००<br><br>
-7.	रु.११००/रु.१३००<br>
-8.	रु.२५००/रु.३०००<br><br>
-9.	रु.१.५/रु.२<br>
-10.	रु.३५<br>
-11.	रु.२५<br>
-12.	रु.५०<br>
-13.	रु.४०<br><br>
-14.	रु.३०<br>
-</td>
-                    <td>सोहि दिन </td>
-                    <td>चालक</td>
-                </tr>
-
- <tr>
-                    <td>१६</td>
-                    <td>दुध खरिद/बिक्रि</td>
-                    <td>खरिद दर-फ्याट/एस.एन.एफ.<br>
-विक्रि दर चि.से.-फ्याट/एस.एन.एफ.<br>
-स्थानिय विक्रि (शेयर सदस्य) भैसिको/मिक्स<br>
-स्थानिय विक्रि (गैर सदस्य) भैसिको/मिक्स<br>
-</td>
- <td>७.१५ /४.५५<br>
-७.१५/४.५५<br>
-१०५/८५ <br>
-११०/९० <br>
-</td>
-                    <td>दुध को भुक्तानी तुरुन्त वा हरेक महिना को १-१५ को भुक्तानी सोहि महिना को २० गते र १६-३० को भुक्तानी अर्को महिनाको ५ गते </td>
-                    <td>प्रवन्धक</td>
-                </tr>
- <tr>
-                    <td>१७ </td>
-                    <td>KYM अध्यावधिक सम्बन्धि</td>
-                    <td>पासपोर्ट साइजको फोटो ३ प्रति <br>
-नागरिकता प्रमाणपत्रको प्रतिलिपि १ प्रति <br>
-मतदाता परिचय पत्रको प्रतिलिपि १ प्रति 
-</td>
-                    <td>-</td>
-                    <td>१ दिन</td>
-                    <td>प्रवन्धक, लेखापाल</td>
-                </tr>
-
-<tr>
-                    <td>१८</td>
-                    <td>अनुदानको सामग्री वितरण</td>
-                    <td>अनुदान को सामग्री वितरण गर्दा निम्न मापदण्ड पुरा गरेको सदस्यलाई बिशेष प्राथमिकता दिइने छ<br>१.संस्थाको सदस्य बनेको हुनु पर्ने <br>२.नियमित बचत गरेको हुनुपर्ने<br>
-३.ऋण लगेको भए नियमित ऋणको साँवा ब्याज भुक्तान गरेको हुनुपर्ने <br>
-४.उपभोक्ता पसलबाट समान किनेको हुनुपर्ने <br>
-५.सहकारीको गाडीमा तरकारी ढुवानी गरेको हुनु पर्ने <br>
-६.संस्थाले संचालन गरेको हरेक गतिविधिमा सक्रिय सहभागी भएको हुनुपर्ने <br>
-७.उस्तै अनुदानको सामग्री पहिलानै संस्थाबाट लिइसकेको हुनु नहुने 
- </td>
-                    <td>-</td>
-                    <td>सहयोगी निकायबाट सामग्री आएपछि</td>
-                    <td>ब्यबस्थापक</td>
-                </tr>
-
-<tr>
-                    <td>१९</td>
-                    <td>क्रेट भाडा </td>
-                    <td>
-संस्थामा सम्पर्क राख्नु पर्ने 
- </td>
-                    <td>४८ घन्टाको रु.१० प्रति क्रेट<br>४८ घन्टा नाघे पछि रु.२० प्रति क्रेट </td>
-                    <td>तुरुन्तै</td>
-                    <td>ब्यबस्थापक</td>
-                </tr>
-
-
-
-                <tr>
-                    <td colspan="6">संस्थागत जानकारी<br>
-क) २०८०।०८१ आ.व जेठ महिना सम्मको ५५१ जना सदस्य (२४८ जना महिला)<br>
-ख) २०८०।०८१ आ.व जेठ महिना सम्मको कूल पुंजी रु.२९६६४९०७.५५ (शेयर पुंजी रु. ३२७८८००, जगेडा तथा अन्य कोषहरु रु. ३२०१८१७.८, बचत रु.१९१५७५७४.५४ बाहृय ऋण रु.०, कूल ऋण लगानी रु.१४९३९८४५.७७, कूल ऋणी संख्या १३२ जना (७६ जना पुरुष ५६ जना महिला)<br>
-ग) सहकारी ब्यबसाय बिस्तारमा हाल सहकार्यमा काम गरिरहेको संस्थाको नाम: जिल्ला सहकारी संघ र जिल्ला दुध उत्पादक सहकारी संघ लि. मकवानपुर<br>
-घ) सहकारी संस्थाको कार्यालय आफ्नो भवनमा वा भांडामा रहेको: मनहरी गाउँपालिका -३,गैरिचोक, मकवानपुर आफ्नै भवनमा संचालन<br>
-ङ) सहकारीले प्राप्त गरेको हाल सम्मको उल्लेख्य उपलब्धीः चिस्यान केन्द्र संचालन, सहकारी पसल संचालन, तरकारी ढुवानी कार्य संचालन<br>
-च) संस्थाको कारोवार समय: (हप्ताको सातै दिन/बार्षिक ३६५ दिन) बिहान ५:३० बजे देखि बेलुका ८:०० बजे सम्म।</td>
-                </tr>
- </marquee>
+                <!-- More rows can be added here following the same structure -->
             </tbody>
         </table>
-    </div>
+    </marquee>
 </div>
-
 </body>
 </html>
