--- a/badapatra1.html
+++ b/badapatra1.html
@@ -82,7 +82,7 @@
     <marquee behavior="scroll" direction="up" scrollamount="10" style="height: 500px;">
         <table>
             <tbody>
-                <tr>
+<tr>
                     <td>१</td>
                     <td>सोधपुछ गुनासो तथा सुझाव</td>
                     <td>संस्थाको सुचना कारोवार कक्ष</td>
@@ -160,22 +160,343 @@
 ९.समुह बचत<br> 
 नियमहरु :<br> 
 	नमुना  कृषक बहुमुखी सहकारी समुह र समुदायमा आधारित संस्था हो एउटै उदेश्य र चासो भएका हरुले समुहमा बचत गर्न सक्छन्<br> 
-	बचत रकम मासिक रु ५० देखि ५०० सम्म गर्न सकिन्छ <br> 
-	समुहमा रहेको सदस्यहरुले समुहको हिसाव किताब आफै राख्न र सञ्चालन गर्न सक्छन् ।<br> 
-	समुहमा रहेको रकमबाट व्याजदर २ प्रतिशत थप गरि ऋण लिन सकिन्छ ।<br> 
-	ब्याजदर वार्षिक ९ प्रतिशत ।<br> <br> 
+	बचत रकम मासिक रु १०० वा सो भन्दा बढि सबैको समान हुन्छ ।<br> 
+	समुहमा २ भन्दा बढि जतिपनि सदस्य रहन सक्छन् ।<br> 
+	व्याजदर वार्षिक ८ प्रतिशत  ।<br> 
+	यस समुहमा जम्मा भएको रकम सदस्यको आवश्यकताको आधारमा १४ प्रतिशत व्याजदरमा समुहका सदस्यभित्र मात्र लगानि हुनेछ ।<br> <br> 
 
-१०.विशेष बचत<br> 
+
+१०. स्वेच्छिक बचत<br> 
 नियमहरु :<br> 
-	आवश्यक परेमा बचत रकम तत्काल लिन सकिने <br> 
-	यसमा कम्तिमा रु ५०० को खाता खोल्न सकिन्छ ।<br> 
-	व्याजदर वार्षिक ६ प्रतिशत ।<br> <br> 
+	सदस्यले यस खातामा जुनसुकै बेला जतिपनि रकम बचत गर्न र झिक्न सक्नेछन् ।<br> 
+	नियमित बचत गर्नुपर्ने बाध्यता छैन ।<br> 
+	यसमा न्युनतम रु ५०० जगेडा राख्नु पर्दछ ।<br> 
+	व्याजदर वार्षिक ५ प्रतिशत  ।<br> <br> 
+११. जेष्ठ नागरिक बचत<br> 
+सदस्यले आफु संरक्षक रहि आफ्नो आमा बुबाको  नाममा संस्थामा जेष्ठ नागरिक बचतखाता खोल्न सकिने छ । <br> 
+नियमहरु :<br> 
+	रु १०० बाट खाता खोल्न सकिनेछ ।<br> 
+	६० वर्ष उमेर पुगेका महानुभावहरुले खाता खोल्न सकिने छ ।<br> 
+	संस्थामा सदस्य वा सदस्यको परिवारका जेष्ठ नागरिकले खाता खोल्न सकिने छ ।<br> 
+	मासिक कम्तिमा रु १०० देखि बढिमा रु ५००० सम्म रकम जम्मा गर्नु पर्नेछ ।<br> 
+	बचतमा ९ प्रतिशत व्याज दिइने छ ।<br> 
+	बचत रकम थप घट गर्नु परेमा प्रत्येक वर्षको श्रावण महिनाबाट गर्न सकिने छ ।<br> 
+	खतामा जम्मा भएको रकम निकाल्नु परेमा आषाढ महिनासम्म जम्मा भएको रकम श्रावण महिनादेखी एक मुष्ठ वा आशिंक रुपमा निकाल्न सकिने छ ।<br> <br> 
+१२.बचत दोब्बर योजना ।<br> 
+सुरुमै एकमुस्ट रकम बचत गर्नु पर्ने छ । ८ वर्ष पुरा भएपछि सुरुबचतको दोब्बर रकम भुक्तानि दिइने छ ।<br> <br> 
+१३. नारी बचत<br> 
+नियमहरु :<br> 
+	यो स्वेच्छिक बचत हो । महिलाले मात्र यसमा बचत गर्न पाउदछन् ।<br> 
+	न्युनतम रु ५०० मा खाता खोल्न सकिन्छ ।<br> 
+	मासिक रु १०० भन्दा माथि रु ५००० सम्म बचत गर्न सकिन्छ ।<br> 
+	सदस्यलाई बचतको आधारमा रु ५००० सम्म सुत्केरी भत्ता दिइने छ ।<br> 
+	जिवनभर २ पटक सम्म मात्र यो सुविधा लिन सकिन्छ ।<br> 
+	ब्याजदर ८ प्रतिशत दिइने छ ।<br> 
 </td>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
+                    <td>खाता खोल्न कुनै शुल्क नलाग्ने।</td>
+                    <td>बचत जम्मा गर्ने दिनहरु १ गते देखी ३० गते सम्म</td>
+                    <td>लेखापाल</td>
                 </tr>
-                <!-- More rows can be added here following the same structure -->
+                <tr>
+                    <td>४</td>
+                    <td>ऋण सेवा</td>
+                    <td>व्यावसायिक/कृषि ऋण : उधोग,व्यापार–व्यावसाय संचालन तथा विस्तार र कृषि कार्यमा प्रयोग हुने ऋण ।<br> 
+	आपतकालिन ऋण : विरामी,आगलागि,दैवि प्रकोपमा राहतको लागि प्रयोग हुने ऋण ।<br> 
+	आवास ऋण :घर जग्गा खरिद,निर्माण तथा मर्मत कार्यमा प्रयोग हुने ऋण ।<br> 
+	सामान खरिद : घरायसि/व्यक्तिगत प्रयोगमा आउने सामानहरु(साईकल,मोटरसाइकल,टि.भि.,फ्रिज,कम्प्युटर) खरिदमा प्रयोग हुने ऋण ।<br> 
+	सामाजिक ऋण : सामाजिक तथा संस्कृतिक कार्य (विवाह,व्रतवन्ध) जस्ता कायमा प्रयोग हुने ऋण । <br> 
+	शिक्षा आर्जनका लागि ऋण :स्वदेशी तथा बैदेशिक शिक्षा आर्जन<br> 
+	(फजुल खर्च हुने विषयमा ऋण लानि गर्न संस्था बाध्य हुने छैन)। </td>
+                    <td>सबै ऋणको ब्याजदर १४ प्रतिशत <br>सेवा शुल्क १ प्रतिशत</td>
+                    <td>७ दिन भित्र</td>
+                    <td>ऋण उप समिती संयोजक</td>
+                </tr>
+                <tr>
+                    <td>५</td>
+                    <td>ऋण लगानी तथा रोक्का सम्बन्धि व्यवस्था</td>
+                    <td>सदस्यले चल/अचल सम्पतीको धितोमा ऋण माग गर्दा पेश गर्नुपर्ने कागजातहरु ।<br> <br> 
+	फर्मेट अनुसारको निवेदन ।<br> 
+	सक्कल लालपुर्जा र प्रतिलिपि १ प्रती ।<br> 
+	हालसालै तिरो तिरेको रसिद ।<br> 
+	नागरिकताको प्रतिलिपि र हालसालै खिचेको पासपोर्ट साइजको फोटो १ प्रती ।<br> 
+	धितो राख्ने जग्गाको चौहद्धि प्रमाणित ।<br> 
+	असिंयारहरु सवैको मञ्जुरीनामा तथा नागरिकताको प्रतिलिपि १/१ प्रती<br> 
+	सेयर धनिको एकाघरको  धितो आएमा निजको मञ्जुरीनामा  सहित नाता  प्रमाणित सम्वन्धि कागज ।<br> 
+	मासिक/वार्षिक आधिकारीक आम्दानि प्रमाणित ।<br> 
+	जग्गाको ट्रेस,ब्लु प्रिन्ट प्रमाणित ।<br> 
+	सक्कल शेयर धनि प्रमाणपत्र <br> 
+	उपरोक्त कागजपत्र तयार गरि फाइलिङ्ग गरेर पेश गर्नु पर्नेछ ।<br> <br> 
+सदस्यले बचत तथा शेयरको आधारमा विना धितो ऋण माग गर्दा पेश गर्नुपर्ने काजगातहरु<br> <br> 
+	फर्मेट अनुसारको निवेदन ।<br> 
+	लाल पुर्जाको प्रतिलिपि १ प्रती ।<br> 
+	ऋण माग गर्ने सदस्यको नागरिकताको प्रतिलिपि प्रती ।<br> 
+	पारिवारिक मञ्जुरीनामा <br> 
+	जमानि बस्नेको हालसालै खिचेको पासपोर्ट साइजको फोटो १ प्रतीे र   नागरिकताको प्रतिलिपि प्रती ।<br> 
+	मासिक/वार्षिक आधिकारीक आम्दानि प्रमाणित ।<br> 
+	हालसालै खिचेको पासपोर्ट साइजको फोटो १ प्रती ।<br> 
+	सक्कल शेयर धनि प्रमाणपत्र<br> 
+	उपरोक्त कागजपत्र तयार गरि फाइलिङ्ग गरेर पेश गर्नु पर्नेछ ।<br> <br> 
+</td>
+
+                    <td>सेवा शुल्क १ प्रतिशत</td>
+                    <td>१५  दिन भित्र </td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+                <tr>
+                    <td>६</td>
+                    <td>ऋणको ब्याजदर तथा अतिरिक्त शुल्क </td>
+                    <td>सबै प्रकारको ऋणमा बार्षिक १४ प्रतिशतका दरले ब्याज लाग्ने छ र कर्जा भुक्तानी तालिका अनुसार ऋणीले किस्ता नबुझाएमा भाका नाघेको संवामा मात्र भाका नाघेको दिनको बार्षिक १ प्रतिशतका दरले अतिरिक्त शुल्क लाग्ने छ ।    </td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+                <tr>
+                    <td>७</td>
+                    <td>ऋण असुली तथा हर्जाना सम्बन्धि व्यवस्था</td>
+                    <td>क) सदस्यको आफ्नै वचत तथा शेयर धितो राखी लगानी गरिने ऋण<br> 
+	रु २०००० सम्म्को ऋण			१८ महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> 
+	रु.२०००० दाखि ५०००० सम्म		३६ महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> 
+	त्यस भन्दा माथि			४८ महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> <br> 
+
+	ख) अन्य चल अचल सम्पति धितो राखि लगानी गरिने ऋण<br> 
+	रु.५०००० सम्म			१८ महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> 
+	रु.५०००० दाखि १००००० सम्म		३६ महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> 
+	रु.१००००० भन्दा माथि			- महिना(मासिक/त्रैमासिक किस्ता) को दरले<br> <br> 
+(नियमित रुपमा साँवा व्याज नवुझाई भाखा नाघेमा नियमअनुसार अतिरिक्त शुल्क  लाग्नेछ र सबै ऋणमा बढिमा ६ महिना सम्मको ग्रेस पिरियड रहनेछ)<br> <br> 
+
+ऋण सिमाङ्कन :–<br> 
+संस्थाको वचत रकमलाइ दृष्टिगत गरि हाललाई निम्नानुसारको रकममा नबढ्नेगरि ऋण प्रवाह गरिने छ ।<br> 
+	आपतकालिन ऋण :		रु.१०००० सम्म<br> 
+	अन्य सवै प्रकारका ऋण :	रु.१००००० सम्म<br> 
+	धितो ऋण	:		रु.१०००००० सम्म
+</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+                <tr>
+                    <td>८</td>
+                    <td>जग्गा फुकुवा सम्बन्धि</td>
+                    <td>ऋण भुक्तानी पछि सम्बन्धित वा इच्छाएको ब्यक्ति</td>
+                    <td>-</td>
+                    <td>१ दिन</td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+                <tr>
+                    <td>९</td>
+                    <td>क्षमता अभिवृद्धि तथा सिप विकास कार्य</td>
+                    <td>क) सहकारी शिक्षा शिविर<br>ख) सिप मुलक तालिमहरु<br>ग) व्यवस्थापन तथा लेखा तालिम<br>घ) ..................................</td>
+                    <td>-</td>
+                    <td>१-३  दिन</td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+                <tr>
+                    <td>१०</td>
+                    <td>साधारण सभा गरिने मिति</td>
+                    <td>प्रत्येक वर्षको पौष मसान्त भित्र </td>
+                    <td>-</td>
+                    <td>१ दिन</td>
+                    <td>संचालक समिति </td>
+                </tr>
+                <tr>
+                    <td>११</td>
+                    <td>वर्तमान संचालक समितिका अध्यक्ष, सचिव र कोषाध्यक्षको नाम, सम्पर्क फोन</td>
+                    <td>अध्यक्ष श्री : लाल बहादुर मल्ल - ९८४५१०३७०२ <br>सचिव श्री : रविराज उप्रेती - ९८४५०५७१८३ <br>कोषाध्यक्ष : बच्चुराम उप्रेती - ९८४५२१२४६७</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+               <tr>
+                    <td>१२</td>
+                    <td>उपभोक्ता पसल</td>
+                    <td>खुल्ने समय :<br> 
+मंसिर– माघ<br> 	 		
+विहान ६:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
+दिउस १२ :०० वजे देखी ६:००वजे सम्म ।<br> 
+शनिवार विहान ६:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
+दिउस ३ :०० वजे देखी ६:०० वजे सम्म ।<br> 
+बाँकी महिना 	<br> 		
+विहान ५:०० वजेदेखी १० : ०० वजे सम्म ।<br> 
+दिउस १२ :०० वजे देखी ७:०० वजे सम्म ।<br> 
+शनिवार विहान ५:०० वजेदेखी १०: ०० वजे सम्म ।<br> 
+दिउस ३:०० वजे देखी ७:०० वजे सम्म ।<br> 
+</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>विक्रि सहायक</td>
+                </tr>
+
+<tr>
+                    <td>१३</td>
+                    <td>किसान परिचय पत्र</td>
+                    <td>1.	नगरीकता प्रमाणपत्रको प्रतिलिपि १ थान<br>
+2.	जग्गाधनि प्रमाणपत्रको प्रतिलिपि १ थान<br>
+3.	जग्गा भाडामा कमाएको भए जग्गा धनि सँग गरीएको भाडा सम्झौतापत्रको प्रतिलिपि<br>
+4.	ऐलानि जग्गाको हकमा वडा सदस्यको रोहवरमा गरीको जग्गाको क्षेत्रफल खुल्ने सर्जिमिन मुचुल्का<br>
+5.	पसपोर्ट साइजको फोटो ३ प्रति<br>
+</td>
+                    <td>परिचय पत्र शुल्क १००</td>
+                    <td>७ दिन भित्र</td>
+                    <td>प्रवन्धक</td>
+                </tr>
+<tr>
+                    <td>१४</td>
+                    <td>तरकारी/सामान ढुवानि <br>काठे साँघु हुँदा</td>
+                    <td>
+	ब्याक लोडको अवस्थामा<br>
+1.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
+2.	हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
+अर्डर/मागको अवस्थामा<br>
+3.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+4.	केन्द्र हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+5.	हेटौंडा एरियाको केहि टाढा वाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+	(कमाने,सिमेन्ट उद्योग,चिसापानि,सामरी) आदि<br>
+अशक्त विरामीको अवस्थामा<br>
+6.	एम्बुलेन्स नपाएर आपतकालिन पर्दा भुन्द्रुङ्ग– हेटौंडा         एकतर्फि<br>
+7.	सहकारीको काममा बाधा नपारी केहीबेर पर्खेर फर्कने समेत<br>
+8.	भुन्द्रुङ्ग– भरतपुर एकतर्फि<br>
+तरकारी/फलफुलको अवस्थामा (लोडिङमा कृषकले अनिवार्य सहयोग गर्नुपर्ने)<br>
+9.	भुन्द्रुङ्ग– हेटौंडा प्रति किलो<br>
+10.	ठुलो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
+11.	सानो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
+12.	ठुलो झोला तरकारीको भाडा  हेटौंडा बजार सम्म लादा रु १० लेवर शुल्क सहित <br>
+13.	हरीयो सानो झोलामा काक्रो तथा हेभी तरकारीको  भाडा  हेटौंडा बजार सम्म लादा रु ७ लेवर शुल्क सहित<br> 
+14.	सानो झोला भिंडी,करेला को भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित 
+
+</td>
+                    <td>सदस्य/गैर सदस्य<br>
+1.	रु.०.५ /रु.०.७५<br>
+2.	रु.१ /रु.१.५<br><br>
+3.	रु.७००/रु.९००<br>
+4.	रु.१४००/रु.१६००<br>
+5.	रु.१७००/रु.१९००<br><br><br>
+6.	रु.८००/रु.१०००<br><br>
+7.	रु.११००/रु.१३००<br>
+8.	रु.२५००/रु.३०००<br><br>
+9.	रु.१.५/रु.२<br>
+10.	रु.३५<br>
+11.	रु.२५<br>
+12.	रु.५०<br>
+13.	रु.४०<br><br>
+14.	रु.३०<br>
+</td>
+                    <td>सोहि दिन </td>
+                    <td>चालक</td>
+                </tr>
+
+
+
+<tr>
+                    <td>१५</td>
+                   <td>तरकारी/सामान ढुवानि <br>काठे साँघु हुँदा</td>
+                    <td>
+	ब्याक लोडको अवस्थामा<br>
+1.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
+2.	हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति के.जि.<br>
+अर्डर/मागको अवस्थामा<br>
+3.	बस्तिपुरवाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+4.	केन्द्र हेटौंडावाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+5.	हेटौंडा एरियाको केहि टाढा वाट भुन्द्रुङ्ग १.५ टन सम्म प्रति टिप<br>
+	(कमाने,सिमेन्ट उद्योग,चिसापानि,सामरी) आदि<br>
+अशक्त विरामीको अवस्थामा<br>
+6.	एम्बुलेन्स नपाएर आपतकालिन पर्दा भुन्द्रुङ्ग– हेटौंडा         एकतर्फि<br>
+7.	सहकारीको काममा बाधा नपारी केहीबेर पर्खेर फर्कने समेत<br>
+8.	भुन्द्रुङ्ग– भरतपुर एकतर्फि<br>
+तरकारी/फलफुलको अवस्थामा (लोडिङमा कृषकले अनिवार्य सहयोग गर्नुपर्ने)<br>
+9.	भुन्द्रुङ्ग– हेटौंडा प्रति किलो<br>
+10.	ठुलो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
+11.	सानो क्रेट भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित <br>
+12.	ठुलो झोला तरकारीको भाडा  हेटौंडा बजार सम्म लादा रु १० लेवर शुल्क सहित <br>
+13.	हरीयो सानो झोलामा काक्रो तथा हेभी तरकारीको  भाडा  हेटौंडा बजार सम्म लादा रु ७ लेवर शुल्क सहित<br> 
+14.	सानो झोला भिंडी,करेला को भाडा हेटौंडा बजार सम्म लादा रु ५ लेवर शुल्क सहित 
+
+</td>
+                    <td>सदस्य/गैर सदस्य<br>
+1.	रु.१ /रु.१.५<br>
+2.	रु.१.५ /रु.२<br><br>
+3.	रु.१०००/रु.१२००<br>
+4.	रु.१५००/रु.१७००<br>
+5.	रु.१८००/रु.२०००<br><br><br>
+6.	रु.८००/रु.१०००<br><br>
+7.	रु.११००/रु.१३००<br>
+8.	रु.२५००/रु.३०००<br><br>
+9.	रु.१.५/रु.२<br>
+10.	रु.३५<br>
+11.	रु.२५<br>
+12.	रु.५०<br>
+13.	रु.४०<br><br>
+14.	रु.३०<br>
+</td>
+                    <td>सोहि दिन </td>
+                    <td>चालक</td>
+                </tr>
+
+ <tr>
+                    <td>१६</td>
+                    <td>दुध खरिद/बिक्रि</td>
+                    <td>खरिद दर-फ्याट/एस.एन.एफ.<br>
+विक्रि दर चि.से.-फ्याट/एस.एन.एफ.<br>
+स्थानिय विक्रि (शेयर सदस्य) भैसिको/मिक्स<br>
+स्थानिय विक्रि (गैर सदस्य) भैसिको/मिक्स<br>
+</td>
+ <td>७.१५ /४.५५<br>
+७.१५/४.५५<br>
+१०५/८५ <br>
+११०/९० <br>
+</td>
+                    <td>दुध को भुक्तानी तुरुन्त वा हरेक महिना को १-१५ को भुक्तानी सोहि महिना को २० गते र १६-३० को भुक्तानी अर्को महिनाको ५ गते </td>
+                    <td>प्रवन्धक</td>
+                </tr>
+ <tr>
+                    <td>१७ </td>
+                    <td>KYM अध्यावधिक सम्बन्धि</td>
+                    <td>पासपोर्ट साइजको फोटो ३ प्रति <br>
+नागरिकता प्रमाणपत्रको प्रतिलिपि १ प्रति <br>
+मतदाता परिचय पत्रको प्रतिलिपि १ प्रति 
+</td>
+                    <td>-</td>
+                    <td>१ दिन</td>
+                    <td>प्रवन्धक, लेखापाल</td>
+                </tr>
+
+<tr>
+                    <td>१८</td>
+                    <td>अनुदानको सामग्री वितरण</td>
+                    <td>अनुदान को सामग्री वितरण गर्दा निम्न मापदण्ड पुरा गरेको सदस्यलाई बिशेष प्राथमिकता दिइने छ<br>१.संस्थाको सदस्य बनेको हुनु पर्ने <br>२.नियमित बचत गरेको हुनुपर्ने<br>
+३.ऋण लगेको भए नियमित ऋणको साँवा ब्याज भुक्तान गरेको हुनुपर्ने <br>
+४.उपभोक्ता पसलबाट समान किनेको हुनुपर्ने <br>
+५.सहकारीको गाडीमा तरकारी ढुवानी गरेको हुनु पर्ने <br>
+६.संस्थाले संचालन गरेको हरेक गतिविधिमा सक्रिय सहभागी भएको हुनुपर्ने <br>
+७.उस्तै अनुदानको सामग्री पहिलानै संस्थाबाट लिइसकेको हुनु नहुने 
+ </td>
+                    <td>-</td>
+                    <td>सहयोगी निकायबाट सामग्री आएपछि</td>
+                    <td>ब्यबस्थापक</td>
+                </tr>
+
+<tr>
+                    <td>१९</td>
+                    <td>क्रेट भाडा </td>
+                    <td>
+संस्थामा सम्पर्क राख्नु पर्ने 
+ </td>
+                    <td>४८ घन्टाको रु.१० प्रति क्रेट<br>४८ घन्टा नाघे पछि रु.२० प्रति क्रेट </td>
+                    <td>तुरुन्तै</td>
+                    <td>ब्यबस्थापक</td>
+                </tr>
+
+
+
+                <tr>
+                    <td colspan="6">संस्थागत जानकारी<br>
+क) २०८०।०८१ आ.व जेठ महिना सम्मको ५५१ जना सदस्य (२४८ जना महिला)<br>
+ख) २०८०।०८१ आ.व जेठ महिना सम्मको कूल पुंजी रु.२९६६४९०७.५५ (शेयर पुंजी रु. ३२७८८००, जगेडा तथा अन्य कोषहरु रु. ३२०१८१७.८, बचत रु.१९१५७५७४.५४ बाहृय ऋण रु.०, कूल ऋण लगानी रु.१४९३९८४५.७७, कूल ऋणी संख्या १३२ जना (७६ जना पुरुष ५६ जना महिला)<br>
+ग) सहकारी ब्यबसाय बिस्तारमा हाल सहकार्यमा काम गरिरहेको संस्थाको नाम: जिल्ला सहकारी संघ र जिल्ला दुध उत्पादक सहकारी संघ लि. मकवानपुर<br>
+घ) सहकारी संस्थाको कार्यालय आफ्नो भवनमा वा भांडामा रहेको: मनहरी गाउँपालिका -३,गैरिचोक, मकवानपुर आफ्नै भवनमा संचालन<br>
+ङ) सहकारीले प्राप्त गरेको हाल सम्मको उल्लेख्य उपलब्धीः चिस्यान केन्द्र संचालन, सहकारी पसल संचालन, तरकारी ढुवानी कार्य संचालन<br>
+च) संस्थाको कारोवार समय: (हप्ताको सातै दिन/बार्षिक ३६५ दिन) बिहान ५:३० बजे देखि बेलुका ८:०० बजे सम्म।</td>
+                </tr>
+
             </tbody>
         </table>
     </marquee>
