--- a/index.html
+++ b/index.html
@@ -5,41 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Service Charter - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+            padding: 10px;
+            background-color: #00FF00;
+        }
+        nav a {
+            flex: 1;
+            margin: 1px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px #FF0000;
+            transition: transform 0.1s, box-shadow 0.1s;
+            text-align: center;
+            white-space: nowrap;
+        }
+        nav a:active {
+            box-shadow: 0 2px #2196F3;
+            transform: translateY(2px);
+        }
+        #home { background-color: #FFA500; }
+        #introduction { background-color: #2196F3; }
+        #saving { background-color: #8B0000; }
+        #loan { background-color: #673ab7; }
+        #services { background-color: #009688; }
+        #notice { background-color: #0000CD; }
+        #shop { background-color: #3f51b5; }
+        #gallery { background-color: #795548; }
+        #charter { background-color: #9c27b0; }
+        #contact { background-color: #006400; }
+        
+        /* Animation for logo */
+        @keyframes rotate {
+            0% {
+                transform: rotateY(0);
+            }
+            100% {
+                transform: rotateY(360deg);
+            }
+        }
+
+        .logo {
+            animation: rotate 10s linear infinite;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1 style="text-align:center; color: green;">श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.
-        <br> मनहरी गाउँपालिका वडा नम्बर ३,गैरीचोक मकवानपुर</h1>
+        <h1 style="color: red; background-color: white; text-align: center; font-size: 24px;">
+            <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
+            श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर<br>स्थापना २०५५/१२/२२ <br> संस्थाको परिचय 
+        </h1>
+
         <marquee behavior="scroll" direction="left" scrollamount="5">
            श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.को पेजमा यहाँहरुलाई हार्दिक स्वागत छ
         </marquee>
     </header>
     <nav>
-        <h2 style="text-align:center; color: green;">
-            <a href="index.html">गृहपृष्ठ</a>
-            <a href="introduction.html">संचालकको विवरण</a>
-            <a href="saving sceme.html">बचत योजनाहरु</a>
-            <a href="rin yojana.html">कर्जा योजनाहरु</a>
-            <a href="ourservice.html">हाम्रो सेवाहरु</a>
-            <a href="suchana.html">सूचना</a>
-            <a href="pricelist.html">उपभोक्ता पसल</a>
-            <a href="gallery.html">ग्यालरी</a>
-            <a href="badapatra1.html">सदस्य बडापत्र</a>
-            <a href="contact.html">सम्पर्क</a>
-        </h2>
+        <a id="home" href="index.html">गृहपृष्ठ</a>
+        <a id="introduction" href="introduction.html">संचालकको विवरण</a>
+        <a id="saving" href="saving sceme.html">बचत योजनाहरु</a>
+        <a id="loan" href="rin yojana.html">कर्जा योजनाहरु</a>
+        <a id="services" href="ourservice.html">हाम्रो सेवाहरु</a>
+        <a id="notice" href="suchana.html">सूचना</a>
+        <a id="shop" href="pricelist.html">उपभोक्ता पसल</a>
+        <a id="gallery" href="gallery.html">ग्यालरी</a>
+        <a id="charter" href="badapatra1.html">सदस्य बडापत्र</a>
+        <a id="contact" href="contact.html">सम्पर्क</a>
     </nav>
     <main>
         <section>
-            <h2>संस्थाको पृष्ठभुमी</h2>
-            <p style="color: red; text-align: justify;">
-                श्री नमुना कृषक बहुमुखी सहकारी संस्था लि. मनहरी गाउँपालिका वडा नं. ३, गैरिचोक, मकवानपुरमा अवस्थित एक प्रतिष्ठित बहुउद्देश्यीय सहकारी संस्था हो। यस संस्थाले विभिन्न प्रकारका कार्यहरू सञ्चालन गर्दै आएको छ।  वि.सं.२०४५ साल बाट नै यहाँका किसानहरुको सकृयतामा गठित ताजा तरकारी उत्पादन समुह को रुपमा स्थापित समूहलाई वि.सं. २०५५।१२।२२ देखी विधिवत रुपमा यस सहकारी संस्थाको नाममा  स्थापना गरी आफ्नो कार्यक्षेत्रका किसानहरुलाई निरन्तर सेवा सुविधा पुर्‍याउंदै आइरहेको छ । मुख्यतया, यसले स्थानीय कृषकहरूसँग दूध संकलन गरी बजारमा बिक्री गर्ने कार्य गर्दछ। साथै, पशु आहारा र रासायनिक मलको खरिद-बिक्री पनि यस संस्थाले गर्ने प्रमुख कार्यहरू हुन्। उपभोक्ता पसल सञ्चालनमार्फत स्थानीय आवश्यकताहरू पूरा गर्न विभिन्न उपभोक्ता सामानहरू उपलब्ध गराउने काम पनि यस संस्थाले गर्दै आएको छ। बचत र ऋण कारोबारको सुविधा प्रदान गरेर सदस्यहरूलाई आर्थिक सहयोग र सशक्तीकरणमा योगदान पुर्‍याइरहेको छ। यस संस्थाले  आफ्नो सेवा मार्फत सामुदायिक विकास र स्थानीय अर्थतन्त्रको सुदृढीकरणमा महत्वपूर्ण भूमिका निर्वाह गरिरहेको छ।यस संस्थाको नाममा ०–१–१६ (एक कठ्ठा सोह्र धुर ) जग्गा र सो जग्गामा वनेको २ वटा भवन  हाल संचालनमा रहंदै आएको छ ।यस संस्थाले हे.न.पा. वडा नं–१९ वस्तिपुर महेन्द्र राजमार्ग छेउमा एउटा  भवन आफ्नै ०–०–८ जग्गामा खडा गरी उक्त भबन मा दुध चिस्यान केन्द्र संचलान गर्दै  आएको छ ।
+
+            <h2>संस्थाको परिचय </h2>
+            <p style="color: #008000; text-align: justify; font-size: 1.2em;">
+                श्री नमुना कृषक बहुमुखी सहकारी संस्था लि. मनहरी गाउँपालिका वडा नं. ३, गैरिचोक, मकवानपुरमा अवस्थित एक प्रतिष्ठित बहुउद्देश्यीय सहकारी संस्था हो। यस संस्थाले विभिन्न प्रकारका कार्यहरू सञ्चालन गर्दै आएको छ।  वि.सं.२०४५ साल बाट नै यहाँका किसानहरुको सकृयतामा गठित ताजा तरकारी उत्पादन समुह को रुपमा स्थापित समूहलाई वि.सं. २०५५।१२।२२ देखी विधिवत रुपमा यस सहकारी संस्थाको नाममा  स्थापना गरी आफ्नो कार्यक्षेत्रका किसानहरुलाई निरन्तर सेवा सुविधा पुर्‍याउंदै आइरहेको छ । मुख्यतया, यसले स्थानीय कृषकहरूसँग दूध संकलन गरी बजारमा बिक्री गर्ने कार्य गर्दछ। साथै, पशु आहारा र रासायनिक मलको खरिद-बिक्री पनि यस संस्थाले गर्ने प्रमुख कार्यहरू हुन्। उपभोक्ता पसल सञ्चालनमार्फत स्थानीय आवश्यकताहरू पूरा गर्न विभिन्न उपभोक्ता सामानहरू उपलब्ध गराउने काम पनि यस संस्थाले गर्दै आएको छ। बचत र ऋण कारोबारको सुविधा प्रदान गरेर सदस्यहरूलाई आर्थिक सहयोग र सशक्तीकरणमा योगदान पुर्‍याइरहेको छ। यस संस्थाले  आफ्नो सेवा मार्फत सामुदायिक विकास र स्थानीय अर्थतन्त्रको सुदृढीकरणमा महत्वपूर्ण भूमिका निर्वाह गरिरहेको छ।यस संस्थाको नाममा ०–१–१६ (एक कठ्ठा सोह्र धुर ) जग्गा र सो जग्गामा वनेको २ वटा भवन  हाल संचालनमा रहंदै आएको छ ।यस संस्थाले हे.न.पा. वडा नं–१९ वस्तिपुर महेन्द्र राजमार्ग छेउमा एउटा  भवन आफ्नै ०–०–८ जग्गामा खडा गरी उक्त भबन मा दुध चिस्यान केन्द्र संचलान गर्दै  आएको छ ।<br><br>
+<p style="color: red;font-size: 1.5em;">अध्यक्षको सन्देश:</p> <img src="https://i.ibb.co/Yf8DBRy/lal-bd.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
+ <p style="color: #008000; text-align: justify; font-size: 1.2em;">
+
+प्रिय सदस्य ज्युहरू,<br>
+हाम्रो संस्था सामाजिक,आर्थिक  विकासको मार्गदर्शकको  रुपमा  अग्रसर रहदै  आएको छ। हामी सदस्यहरूको सकृय सहभागितामा आधारित एक प्रतिष्ठित संस्था हौं, जसले विविध क्षेत्रमा आफ्नो योगदान गरेको छ।हाम्रो प्रमुख उद्देश्यहरूमा स्थानीय किसानहरूको आर्थिक सशक्तिकरण, ताजा तरकारी उत्पादन, वित्त  व्यवस्थापन र पशुपालन, दुध उत्पादन प्रबर्धन गर्ने रहेको  छ। हाम्रो संस्था द्वारा स्थानीय उत्पादनका लागि उपलब्ध सेवाहरूको ब्यबस्थापन, बचत र ऋण सेवाहरू प्रावह गरि हाम्रा सदस्यहरूमा स्वोरोजगार सिर्जना गर्दै समाजलाई आर्थिक रुपमा सबल बनाउने प्रयास भईरहेको छ ।आफ्ना सदस्य हरुलाई प्रत्यक्ष लाभ हुने गरि संस्थामै सुपथमूल्य उपभोक्ता पसल समेत संचालन गरि सेवा दिदै आएका छौ  त्यसको साथै कृषक हरुको उत्पादित कृषि उपज सुलभ दरमा बजार सम्म ढुवानी,सुपथ मुल्यमा कृषि उपकरणहरु,मलखाद,पशुआहर आदिको व्यवस्थापन हुदै आएको छ 
+हाम्रो सेवाहरूको माध्यमबाट हाम्रो संस्थाले समुदायिक विकास र स्थानीय अर्थतन्त्रको सुदृढीकरणमा महत्वपूर्ण भूमिका निर्वाह गरिरहेको छ।
+हाम्रो संस्थाको सक्षम संचालक समिति तथा उपसमितिहरु , अनुभवी कर्मचारी,एवं असल सदस्यहरूको सहयोग र भरपुर समर्थनमा निरन्तर विश्वास राखी, हामी स्थानीय समुदायको समृद्धि र विकासका लागि पूर्णतया प्रतिबद्ध छौं।
+सदस्यहरूको सक्रिय सहभागिताका लागि  सबैमा  धन्यवाद ! <br><br>
+
+
+<p style="color: red;font-size: 1.5em;"> लाल बहादुर मल्ल <br>
+अध्यक्ष</p>
+
             </p>
         </section>
         <section>
-
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0"></script>
-            
             <div class="fb-like" data-href="https://namunacoop.github.io/namunafmc/index.html" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
         </section>
     </main>
