--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 सदस्यहरूको सक्रिय सहभागिताका लागि  सबैमा  धन्यवाद! <br>
 
 
-<p style="color: red;font-size: 1.2em;"> लाल बहादुर मल्ल <br>
-अध्यक्ष</p>
+<p style="color: red;font-size: 1.2em;"> लाल बहादुर मल्ल(अध्यक्ष)</p>
 
             </p>
         </section>
