--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,20 @@
         .logo {
             animation: rotate 10s linear infinite;
         }
+
+        /* Light and dim animation */
+        @keyframes lightDim {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+
+        .light-dim {
+            animation: lightDim 2s infinite;
+        }
     </style>
 </head>
 <body>
@@ -67,40 +81,28 @@
     </header>
     <nav>
       
-
     </nav>
     <main>
         <section>
-            <h2>सिस्टम निर्माण </h2><img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="logo" style="float: left; margin-right: 10px;">
-
-             <p style="color: red; text-align: justify;">
-
-
-नाम : सुनिल कुमार अर्याल <br>
-ठेगाना : मनहरी गाउँपालीका वडा नं -३,मकवानपुर <br>
-सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
-इमेल : aryalsunil026@gmail.com <br>
-ब्लग : https://smartkhabarp3.blogspot.com/<br>
-WhatsApp : 9855072930<br><br><br>मेरो अन्य थप एप्लिकेसनहरु <br>
-•	Online Result Management System <br>
-•	Inventory Management System <br>
-•	Co-Operative Account Management System With Char Khata <br>
-•	Co-Operative Mobile Application <br>
-•	SEE Account Note Mobile Application <br>
-•	E-Darta/Chalani & E-Hajiri System <br>
-•	Smartkhabarp3 Blog <br> 
-•	KBC Quiz Application<br> 
-•	Trial Balance Online Practice System  
-
-
-
-
-
-
-
-
-
- </p>
+            <h2>सिस्टम निर्माण </h2>
+            <img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="light-dim" style="float: left; margin-right: 10px;">
+            <p style="color: red; text-align: justify;">
+                नाम : सुनिल कुमार अर्याल <br>
+                ठेगाना : मनहरी गाउँपालीका वडा नं -३,मकवानपुर <br>
+                सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
+                इमेल : aryalsunil026@gmail.com <br>
+                ब्लग : https://smartkhabarp3.blogspot.com/<br>
+                WhatsApp : 9855072930<br><br><br>मेरो अन्य थप एप्लिकेसनहरु <br>
+                • Online Result Management System <br>
+                • Inventory Management System <br>
+                • Co-Operative Account Management System With Char Khata <br>
+                • Co-Operative Mobile Application <br>
+                • SEE Account Note Mobile Application <br>
+                • E-Darta/Chalani & E-Hajiri System <br>
+                • Smartkhabarp3 Blog <br>
+                • KBC Quiz Application<br>
+                • Trial Balance Online Practice System
+            </p>
         </section>
     </main>
     <footer>
