--- a/contact.html
+++ b/contact.html
@@ -137,37 +137,46 @@
 </head>
 <body>
     <header>
-    <h1 style="color: red; background-color: white; text-align: center; font-size: 24px;">
-   <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
+        <h1 style="color: gold; text-align: center; font-size: 30px; text-shadow: 2px 2px 4px black; background-color: white; padding: 10px;">
+            <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
+            <span style="font-weight: bold;">
+                श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर
+            </span><br>
+            <span style="font-size: 22px;color: red; text-shadow: 2px 2px 4px black; background-color: white; padding: 10px;">
+                स्थापना २०५५/१२/२२ <br>
+                सम्पर्क नम्बर : ९८४५१०३७०२, E-mail : namunacooperatie3@gmail.com
+            </span>
+        </h1>
 
-    श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर<br>स्थापना २०५५/१२/२२ <br> सम्पर्क 
-</h1>
         <marquee behavior="scroll" direction="left" scrollamount="5">
-          सम्पर्क नम्बर : ९८४५१०३७०२,E-mail :namunacooperatie3@gmail.com         </marquee>
+            सम्पर्क नम्बर : ९८४५१०३७०२,E-mail :namunacooperatie3@gmail.com
+        </marquee>
     </header>
     <nav>
       
     </nav>
     <main>
         <section>
-            <h2>सिस्टम निर्माण </h2>
-            <img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="light-dim" style="float: left; margin-right: 10px;">
+            <img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="light-dim" style="float: left; margin-right: 10px;"> 
+            <span style="color: green;font-size: 20px">सिस्टम निर्माण</span> <br> 
             <p style="color: red; text-align: justify;">
-                <span style="color:blue;">नाम : सुनिल कुमार अर्याल <br>
-                ठेगाना : मनहरी गाउँपालीका वडा नं -३,मकवानपुर <br>
-                सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
-                इमेल : aryalsunil026@gmail.com <br>
-                ब्लग : https://smartkhabarp3.blogspot.com/<br>
-                WhatsApp : 9855072930<br><br><br>मेरो अन्य थप एप्लिकेसनहरु <br>
-                • Online Result Management System <br>
-                • Inventory Management System <br>
-                • Co-Operative Account Management System With Char Khata <br>
-                • Co-Operative Mobile Application <br>
-                • SEE Account Note Mobile Application <br>
-                • E-Darta/Chalani & E-Hajiri System <br>
-                • Smartkhabarp3 Blog <br>
-                • KBC Quiz Application<br>
-                • Trial Balance Online Practice System</span>
+                <span style="color:blue;"> 
+                    नाम : सुनिल कुमार अर्याल <br>
+                    ठेगाना : मनहरी गाउँपालीका वडा नं -३,मकवानपुर <br>
+                    सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
+                    इमेल : aryalsunil026@gmail.com <br>
+                    ब्लग : https://smartkhabarp3.blogspot.com/<br>
+                    WhatsApp : 9855072930<br> <span style="color: green;font-size: 20px">मेरो अन्य थप एप्लिकेसनहरु</span>  <br>
+                    • Online Result Management System <br>
+                    • Inventory Management System <br>
+                    • Co-Operative Account Management System With Char Khata <br>
+                    • Co-Operative Mobile Application <br>
+                    • SEE Account Note Mobile Application <br>
+                    • E-Darta/Chalani & E-Hajiri System <br>
+                    • Smartkhabarp3 Blog <br>
+                    • KBC Quiz Application<br>
+                    • Trial Balance Online Practice System
+                </span>
             </p>
             <!-- Flying butterfly and balloon -->
             <img src="https://i.ibb.co/vv10GGy/butterfly.png" class="flying-object butterfly" alt="Butterfly">
