--- a/suchana.html
+++ b/suchana.html
@@ -91,7 +91,7 @@
   सुचना !! सुचना !!!
 </h1>
 <marquee style="color: blue;">
-    बोनस वितरण सम्बन्धि सूचना 
+  आर्थिक वर्ष २०७९/०८० को शेयर बोनस र कृषक बोनस भोलि बिहान वितरण गरिने जानकारी गराउदछु |
 </marquee>
 <nav>
     <!-- Navigation links can be added here -->
