--- a/suchana.html
+++ b/suchana.html
@@ -100,7 +100,7 @@
     <section>
         <h3 style="text-align:justify;">
             <div class="blinking-marquee">
-              भोलि आसर १५ अर्थात् दहि चिउरा खाने दिन तपाईहरुलाइ  शुद्ध दहि सुलभ मूल्यमा चाहिएमा संस्थामा सम्पर्क गर्नु होला | साथै संस्थाले दुध को भुक्तानीमा सहजता को लागि दुध को विविधिकरण गरि परिकारहरु बनाउन लागेका ले उक्त सामान उपभोग गर्ने कृषक ले दहि पनिर लगायत सामान संस्था बाटै खरिद गर्नु पर्ने छ यदि बाहिर बाट खरिद गरिएको पाइएमा संस्थामा दुध बिक्रि गर्ने किसान को भुक्तानी संघ बाट पैसा आएपछि मात्र हुने छ 
+              भोलि आसर १५ अर्थात् दहि चिउरा खाने दिन तपाईहरुलाइ  शुद्ध दहि सुलभ मूल्यमा चाहिएमा संस्थामा सम्पर्क गर्नु होला | साथै संस्थाले दुधको भुक्तानीमा सहजताको लागि दुध को विविधिकरण गरि परिकारहरु बनाउन लागेकाले उक्त सामान उपभोग गर्ने कृषकले दहि पनिर लगायत सामान संस्था बाटै खरिद गर्नु पर्नेछ | यदि बाहिर बाट खरिद गरिएको पाइएमा संस्थामा दुध बिक्रि गर्ने किसानको भुक्तानी संघ बाट पैसा आएपछि मात्र हुने छ 
             </div>
         </h3>
     </section>
