--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ font-size: 1em;
                 <a href="#" onclick="toggleFMPlayer('https://live.itech.host:9011/stream')">Radio Madhyapaschim</a>
                 <a href="#" onclick="toggleFMPlayer('https://live.itech.host:9442/stream')">Gunjan FM 102.2 MHz</a>
             </div>
-        </div><br>स्थापना २०५५/१२/२२ <br> संस्थाको परिचय 
+        </div><br>मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर<br> स्थापना २०५५/१२/२२
         </h1>
 
         <marquee behavior="scroll" direction="left" scrollamount="5">
