--- a/suchana.html
+++ b/suchana.html
@@ -91,7 +91,7 @@
   सुचना !! सुचना !!!
 </h1>
 <marquee style="color: blue;">
-  आर्थिक वर्ष २०७९/०८० को शेयर बोनस र कृषक बोनस भोलि बिहान वितरण गरिने जानकारी गराउदछु |
+नेपाली हिन्दूहरुको विशेष पर्व बिजयादशमी २०८१ को सुखद् उपलक्ष्यमा हाम्रा सम्पूर्ण शेयर सदस्यहरूमा सुख, शान्ति, समृद्धि, सुस्वास्थ्य एवं दीर्घायुको हार्दिक मंगलमय शुभकामना व्यक्त गर्दछौ 
 </marquee>
 <nav>
     <!-- Navigation links can be added here -->
@@ -100,7 +100,7 @@
     <section>
         <h3 style="text-align:justify;">
             <div class="blinking-marquee">
-             आउदै गरेको बिजया दशमी को उपलक्ष्यमा हाम्रा सदस्यहरुलाई उपभोक्ता पसलमा बिशेस छुट को व्यवस्था मिलाउदै छौ  
+             नेपाली हिन्दूहरुको विशेष पर्व बिजयादशमी २०८१ को सुखद् उपलक्ष्यमा हाम्रा सम्पूर्ण शेयर सदस्यहरूमा सुख, शान्ति, समृद्धि, सुस्वास्थ्य एवं दीर्घायुको हार्दिक मंगलमय शुभकामना व्यक्त गर्दछौ 
             </div>
         </h3>
     </section>
