--- a/suchana.html
+++ b/suchana.html
@@ -91,7 +91,7 @@
   सुचना !! सुचना !!!
 </h1>
 <marquee style="color: blue;">
-नेपाली हिन्दूहरुको विशेष पर्व बिजयादशमी २०८१ को सुखद् उपलक्ष्यमा हाम्रा सम्पूर्ण शेयर सदस्यहरूमा सुख, शान्ति, समृद्धि, सुस्वास्थ्य एवं दीर्घायुको हार्दिक मंगलमय शुभकामना व्यक्त गर्दछौ 
+मनहरी गाउँपालिकाबाट यस संस्थाको गत आर्थिक वर्षको दूध सङ्कलनको आधारमा कृषकहरूको लागि प्राप्त प्रतिलिटर रु.३ का दरले हुने अनुदान रकम वितरण भइरहेको जानकारी गराउदछौ
 </marquee>
 <nav>
     <!-- Navigation links can be added here -->
