--- a/suchana.html
+++ b/suchana.html
@@ -117,7 +117,7 @@
     <h3>Listen to Announcement</h3>
     <!-- Audio with Google Drive link -->
     <audio controls autoplay>
-        <source src="https://drive.google.com/uc?export=download&id=16dHXjygLQ13pGmZSHvw-lL_En90L5NGV" type="audio/mp3">
+        <source src="https://github.com/namunacoop/Namunafmc/blob/main/WhatsApp%20Video%202024-12-20%20at%207.30.06%20AM.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </section>
