--- a/suchana.html
+++ b/suchana.html
@@ -103,14 +103,30 @@
     <section>
         <h3 style="text-align:justify;">
             <div class="blinking-marquee">
-             प्रस्तुत सम्वन्धमा यस संस्थाको मिति २०८१।०८।२९ गते बसेको संचालक समितिको बैठक निर्णयानुसार संस्थाको २७औं वार्षिक साधारण सभा तपशिल अनुसारको मिति,स्थान र समयमा संचालन गरिने भएको हुँदा  उक्त सभामा गरिमामय उपस्थितिका लागि यस संस्थाका सम्पुर्ण शेयर सदस्यहरुलाई अनुरोध गरीन्छ । 
-            </div>
+             प्रस्तुत सम्वन्धमा यस संस्थाको मिति २०८१।०८।२९ गते बसेको संचालक समितिको बैठक निर्णयानुसार संस्थाको २७औं वार्षिक साधारण सभा तपशिल अनुसारको मिति,स्थान र समयमा संचालन गरिने भएको हुँदा  उक्त सभामा गरिमामय उपस्थितिका लागि यस संस्थाका सम्पुर्ण शेयर सदस्यहरुलाई अनुरोध गरीन्छ ।
+सभाको लागि सम्पुर्ण शेयर सदस्यहरुलाई पत्र पठाइएको छ कारणवस पत्र हात नपरेमा यसै सुचनालाई आधार मानेर उपस्थित हुन सबै शेयर सदस्य ज्युहरुमा अनुरोध गर्दछु । <br>
+साधारण सभाका विषयहरु :<br>
+•	संचालक समितिको तर्फवाट अध्यक्ष ज्युको प्रतिवेदन सम्वन्धमा ।<br>
+•	लेखा सु.समितिको तर्फवाट लेखा संयोजकको प्रतिवेदन सम्वन्धमा ।<br>
+•	उपसमितिको प्रतिवेदन सम्वन्धमा ।<br>
+•	आ.व. २०८०/०८१ को लेखा परिक्षण प्रतिवेदन सम्वन्धमा ।<br>
+•	आ.व. २०८१/०८२ को प्रस्तावित बजेट तथा कार्यक्रम सम्वन्धमा ।<br>
+•	आ.व. २०८१/०८२ को लागि लेखा परिक्षकको नियुक्ति र निजको पारिश्रमिक निर्धारण सम्वन्धमा ।<br>
+•	साधारण सभाको निर्णय पुस्तिका प्रमाणित गर्ने सम्वन्धमा ।<br>
+•	बिधान संसोधन तथा  पुनर्लेखन सम्बन्धमा ।<br>
+•	कार्यविधिहरु  निर्माण सम्बन्धमा ।<br>
+•	विविध ।<br>
+	तपशिल : <br>
+	मिति  : २०८१।०९।२० गते ।       <br>
+	स्थान  :  सहकारीको आफ्नै भवन मनहरी –३,गैरिचोक ।     <br>                                                              
+	 समय  : विहान ११:०० वजे ।   
+
         </h3>
     </section>
 
     <!-- Audio Player Section with Autoplay -->
     <section>
-        <h4>Listen to Important Announcement</h4>
+        <h4>27th AGM</h4>
         <!-- Audio player with autoplay enabled -->
         <audio id="audioPlayer" controls autoplay>
             <source src="https://github.com/namunacoop/Namunafmc/blob/main/%E0%A5%A8%E0%A5%AD%E0%A4%94%E0%A4%82%20%E0%A4%AC%E0%A4%BE%E0%A4%B0%E0%A5%8D%E0%A4%B7%E0%A4%BF%E0%A4%95%20%E0%A4%B8%E0%A4%BE%E0%A4%A7%E0%A4%BE%E0%A4%B0%E0%A4%A3%20%E0%A4%B8%E0%A4%AD%E0%A4%BE%20%E0%A4%A8%E0%A4%AE%E0%A5%81%E0%A4%A8%E0%A4%BE%20%E0%A4%95%E0%A5%83%E0%A4%B7%E0%A4%95%20%E0%A4%AC%E0%A4%B9%E0%A5%81%E0%A4%AE%E0%A5%81%E0%A4%96%E0%A5%80%20%20%E0%A4%B8%E0%A4%B9%E0%A4%95%E0%A4%BE%E0%A4%B0%E0%A5%80%20.mp3?raw=true" type="audio/mp3">
